--- a/src/FoodZone/FoodZone.Web/Views/Shared/_TableArea.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Shared/_TableArea.cshtml
@@ -15,7 +15,7 @@
                 Khu vực bàn @item.Capacity người<br>
                 Ghi chú: @(item.Capacity <= 4 ? "có không gian riêng tư" : "thích hợp đi nhiều người")
                 <br>
-                Số lượng còn: <input id="count" value=@item.Count>
+                Số lượng còn: <p id="count">@item.Count</p>
             </div>
         </label>
     </div>
