--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -73,9 +73,11 @@ body {
     scroll-behavior: smooth;
     font-size: 14px;
 }
-.disable{
-    background:red;
+
+.disable {
+    background: red;
 }
+
 h1,
 h2,
 h3,
@@ -2749,8 +2751,6 @@ mark {
 
 /*    05 - Layout - Footer
 /*----------------------------------------*/
-
-
 
 .footer-area .footer-widget-area {
     padding: 100px 0;
@@ -7848,17 +7848,18 @@ mark {
 .window-5 {
     top: 90%;
 }
+
 .input-custom-table:checked+label {
     border: 1px solid black;
 }
+
 .label-table {
     width: 100%;
     height: 100%;
     padding: 10px
 }
 
-
-.table-2{
+.table-2 {
     border-radius: 3px;
     bottom: 5px;
     width: 40%;
@@ -7875,7 +7876,7 @@ mark {
     border: 1px solid black;
 }
 
-.table-6{
+.table-6 {
     border-radius: 3px;
     width: 50%;
     height: 40%;
@@ -7906,7 +7907,6 @@ mark {
 .table-8 .label-table:hover {
     border: 1px solid black;
 }
-
 
 .table-3 {
     width: 40%;
@@ -7943,7 +7943,7 @@ mark {
 .table-9 {
     width: 50%;
     height: 30%;
-    top : 0px;
+    top: 0px;
     border-radius: 3px;
 }
 
@@ -7978,7 +7978,16 @@ input#count {
     text-align: center;
     width: 100%;
     background: #808080;
-    color:white;
+    color: white;
+}
+
+.center-margin {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.header-menu-custom-style {
+    margin-left: auto;
 }
 
 
