--- a/src/FoodZone/FoodZone.Web/Views/Account/Register.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Account/Register.cshtml
@@ -3,71 +3,42 @@
     ViewBag.Title = "Đăng ký";
 }
 
-<div class="breadcrumbs-area position-relative">
-    <div class="container">
+<div class="login-register-area mt-5">
+    <div class="container container-default-2 custom-area">
         <div class="row">
-            <div class="col-12 text-center">
-                <div class="breadcrumb-content position-relative section-content">
-                    <h3 class="title-3">Đăng ký</h3>
-                    <ul>
-                        <li><a href="@Url.Action("Index","Home")">Trang chủ</a></li>
-                        <li>Đăng ký</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="shop-collection-area gray-bg pt-no-text pb-no-text">
-    <div class="container custom-area">
-        <div class="row mb-30">
             @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Create a new account.</h4>
-                <hr />
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Fullname, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Fullname, new { @class = "form-control" })
+                <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 col-custom">
+                    <div class="login-register-wrapper">
+                        <div class="section-content text-center mb-5">
+                            <h2 class="title-4 mb-2">Tạo tài khoản</h2>
+                            <p class="desc-content">Làm ơn đăng ký theo những thông tin phía dưới</p>
+                            <p>@Html.ValidationSummary("", new { @class = "text-danger" })</p>
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.TextBoxFor(m => m.Fullname, new { @placeholder = "Tên đầy đủ" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.TextBoxFor(m => m.Username, new { @placeholder = "Tên đăng nhập" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.TextBoxFor(m => m.Email, new { @placeholder = "Email" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.TextBoxFor(m => m.PhoneNumber, new { @placeholder = "Số điện thoại" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.PasswordFor(m => m.Password, new { @placeholder = "Mật khẩu" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            @Html.PasswordFor(m => m.ConfirmPassword, new { @placeholder = "Xác nhận mật khẩu" })
+                        </div>
+                        <div class="single-input-item mb-3">
+                            <input type="submit" class="btn flosun-button secondary-btn theme-color rounded-0" value="Đăng ký">
+                        </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Username, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Username, new { @class = "form-control" })
                     </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
-                    <div class="col-md-10">
-                        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-2 control-label">Mật khẩu</div>
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-2 control-label">Xác nhận mật khẩu</div>
-                    <div class="col-md-10">
-                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-success" value="Register" />
-                    </div>
-                </div>
             }
         </div>
     </div>
