--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -37,7 +37,7 @@
                                 <div class="col-12 col-custom">
                                     <div class="input-item mb-4">
                                         <div class="title-booking">Chọn Combo</div>
-                                        @Html.DropDownList("MenuId", null, htmlAttributes: new { @class = "form-select" })
+                                        @Html.DropDownList("MenuId", null, htmlAttributes: new { @class = "form-select select-single" })
                                         @Html.ValidationMessageFor(model => model.MenuId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -108,10 +108,11 @@
 
                                     </div>
                                 </div>
-                                <div class="col-md-12 col-custom">
+                                <div class="col-12 col-custom">
                                     <div class="input-item mb-4">
-                                        <div class="title-booking">Mã ưu đãi</div>
-                                        @Html.TextBoxFor(m => m.Code, new { @class = "form-control", @placeholder = "Mã ưu đãi" })
+                                        <div class="title-booking">Mã ưu đãi của bạn</div>
+                                        @Html.DropDownList("CodeId", null, htmlAttributes: new { @class = "form-select select-single" })
+                                        @Html.ValidationMessageFor(model => model.CodeId, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
                                 <div class="col-md-12 col-custom">
@@ -140,7 +141,7 @@
                     <div class="booking-box">
                         <div class="comment-box">
                             <h5 class="text-uppercase">Vui lòng đăng nhập để đặt bàn</h5>
-                            @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn flosun-button secondary-btn theme-color rounded-0" })
+                            @Html.ActionLink("Đăng Nhập", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink", @class = "btn flosun-button secondary-btn theme-color rounded-0" })
                         </div>
                     </div>
                 </div>
@@ -154,37 +155,40 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.signalR-2.4.3.min.js"></script>
-    <script src="signalr/hubs"></script>
-    <script >
+    <script src="~/signalr/hubs"></script>
+    <script>
         const capa = document.getElementById("capa");
         /*const count = document.querySelectorAll("#count");*/
         /*Array.from(count);*/
         const arr = [...document.querySelectorAll(".object #count")]
         console.log(capa)
-        function handleChange() {
+        function handleChangeCount() {
             const check = capa.value;
-            console.log(typeof(check))
-            for (var i = 0; i < arr.length; i++) {
-                if (parseInt(check) > arr[i].value) {
-                    arr[i].parentElement.style.background = "red";
-                    console.log(arr[i].value)
+            if (check != "" ) {
+                for (var i = 0; i < arr.length; i++) {
+                    if (parseInt(check) > parseInt(arr[i].textContent)) {
+                        console.log(arr[i].offsetParent.childNodes)
+                        arr[i].offsetParent.childNodes[1].setAttribute('disabled', '');
+                    }
                 }
+            }
+            else {
+                for (var i = 0; i < arr.length; i++) {
+                    if  (parseInt(arr[i].textContent)> 0) {
+                        arr[i].offsetParent.childNodes[1].removeAttribute('disabled', '');
+                    }
+                }
+                
             }
         }
         $(function () {
             var hubNotify = $.connection.tableHub;
+            $.connection.hub.logging = true;
 
-            $.connection.hub.start().done(function () {
-                refreshTable();
-            });
-
+            $.connection.hub.start();
             hubNotify.client.refreshAllTable = function () {
-                console.log('vaoooooooooooooooooo 2222222222222222222222')
-                $('#submit').click(function () {
-                    refreshTable();
-                });
+                refreshTable();
             };
-            
         });
         function refreshTable() {
             $.ajax({
@@ -192,10 +196,10 @@
                 contentType: 'application/html ; charset:utf-8',
                 type: 'GET',
                 dataType: 'html',
-                success: function (result) {
-                    $('#col-signal').replaceWith(result);
+                success: function(result) {
+                    document.getElementById("col-signal").innerHTML = result;
                 }
-            });
+            })
         }
     </script>
 }
