update Reservation realtime p2

--- a/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
+++ b/src/FoodZone/FoodZone.Web/Views/Reservation/Index.cshtml
@@ -43,7 +43,7 @@
                                 </div>
                                 <div class="col-md-12 col-custom">
                                     <div class="input-item mb-4">
-                                        <div class="title-booking">Chọn ngày</div>
+                                        <div class="title-booking">Thời gian dùng bữa</div>
                                         @Html.EditorFor(m => m.ReservationDate, new { htmlAttributes = new { @class = "border-0 rounded-0 w-100 input-area email gray-bg", @disabled = "disabled" } })
                                     </div>
                                 </div>
