--- a/src/FoodZone/FoodZone.Web/Assets/css/style.css
+++ b/src/FoodZone/FoodZone.Web/Assets/css/style.css
@@ -7990,7 +7990,36 @@ input#count {
     margin-left: auto;
 }
 
+.modal-lvl {
+    display:none;
+    position: fixed;
+    z-index: 99;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #cdcdcd;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-lvl .modal-content {
+    margin: 10% auto;
+    width: 40%;
+    border-radius: 0%;
+    border: none;
+    background-color: #cdcdcd;
+    padding: 0 15px 20px 20px;
+}
 
+    .modal-lvl .close {
+        color: black;
+        text-align: end;
+        font-size: 28px;
+        font-weight: bold;
+        cursor: pointer;
+        width: 100%;
+    }
 /* Modified from: https://github.com/mukulkant/Star-rating-using-pure-css */
 
 
